--- a/Agenda WEB/index.html
+++ b/Agenda WEB/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iNote</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../components/style.css">
 </head>
 <body>
     <nav class="sidebar">
@@ -46,7 +46,5 @@
             <h1>Contacts list</h1>
         </div>
     </div>
-
-        <script src="/Javascript/index.js"></script>
 </body>
 </html>
